kubernetes/enforce-https.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: enforce-https
  namespace: swiftcloud
spec:
  redirectScheme:
    scheme: https
    permanent: true
