kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity-ui
spec:
  selector:
    app: swiftcloud
    component: identity-ui
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
