kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: swiftcloud-identity-ui
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: swiftcloud-enforce-https@kubernetescrd
spec:
  tls:
    - hosts:
        - identity.swiftcloud.co.zm
      secretName: swiftcloud-identity-ui-tls
  rules:
  - host: identity.swiftcloud.co.zm
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: identity-ui
            port: 
              number: 3000
